--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -7,16 +7,22 @@
     <h1 style="display: inline;">{{ title }}</h1>
     {% if scoreboard or session.admin %}
         <div class="dropdown" style="display: inline; margin-left: 4px;">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: -18px;">Actions</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                    style="margin-top: -18px;">Actions</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% if scoreboard %}
                     <a class="dropdown-item" href="{{ request.path }}/scoreboard">Scoreboard</a>
                 {% endif %}
                 {% if session.admin %}
-                    <a class="dropdown-item" href="/admin/submissions?contest_id={{ request.path[9:] }}">Submissions</a>
-                    <a class="dropdown-item" href="{{ request.path }}/addproblem">Add Problem</a>
-                    <a class="dropdown-item" href="{{ request.path }}/drafts">View Draft Problems</a>
-                    <a class="dropdown-item" href="{{ request.path }}/notify">Notify Participants</a>
+                    <a class="dropdown-item"
+                       href="/admin/submissions?contest_id={{ request.path[9:] }}">Submissions</a>
+                    <a class="dropdown-item"
+                       href="{{ request.path }}/addproblem">Add Problem</a>
+                    <a class="dropdown-item"
+                       href="{{ request.path }}/drafts">View Draft Problems</a>
+                    <a class="dropdown-item"
+                       href="{{ request.path }}/notify">Notify Participants</a>
                 {% endif %}
             </div>
         </div>
@@ -38,12 +44,18 @@
             <tr>
                 <td>
                     {% if row["solved"] %}
-                        <img class="svg-green icon" src="/assets/images/check.svg" onerror="this.src='/assets/images/check.png'"></img>
+                        <img class="svg-green icon"
+                             src="/assets/images/check.svg"
+                             onerror="this.src='/assets/images/check.png'">
                     {% else %}
-                        <img class="svg-red icon" src="/assets/images/times.svg" onerror="this.src='/assets/images/times.png'"></img>
+                        <img class="svg-red icon"
+                             src="/assets/images/times.svg"
+                             onerror="this.src='/assets/images/times.png'">
                     {% endif %}
                 </td>
-                <td><a href="{{ request.path }}/problem/{{ row["problem_id"] }}">{{ row["name"] }}</a></td>
+                <td><a href="{{ request.path }}/problem/{{ row['problem_id'] }}">
+                    {{ row["name"] }}
+                </a></td>
                 <td>{{ row["category"] }}</td>
                 {% if row["dynamic"] %}
                     <td title="This problem is dynamically scored">{{ row["point_value"] }}D</td>
@@ -51,7 +63,9 @@
                     <td>{{ row["point_value"] }}</td>
                 {% endif %}
                 {% if session.admin %}
-                    <td><a href="/admin/submissions?problem_id={{ row["problem_id"] }}&contest_id={{ request.path[9:] }}&correct=AC">{{ row["sols"] }}</a></td>
+                    <td><a href="/admin/submissions?problem_id={{ row['problem_id'] }}&contest_id={{ request.path[9:] }}&correct=AC">
+                        {{ row["sols"] }}
+                    </a></td>
                 {% else %}
                     <td>{{ row["sols"] }}</td>
                 {% endif %}
