--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -5,10 +5,30 @@
 {% block main %}
 <h1 class="text-center">Register</h1>
 <form method="post">
-    <input autocomplete="off" autofocus class="form-control mb-3" name="username" placeholder="Username" type="text" required>
-    <input class="form-control mb-3" name="email" placeholder="Email Address" type="email" required>
-    <input class="form-control mb-3" name="password" placeholder="Password" type="password" autocomplete="new-password" required>
-    <input class="form-control mb-3" name="confirmation" placeholder="Confirmation" type="password" autocomplete="new-password" required>
+    <input autocomplete="off"
+           autofocus class="form-control mb-3"
+           name="username"
+           placeholder="Username"
+           required>
+    <input class="form-control mb-3"
+           name="email"
+           placeholder="Email Address"
+           type="email"
+           required>
+    <input class="form-control mb-3"
+           name="password"
+           id="password"
+           placeholder="Password"
+           type="password"
+           autocomplete="new-password"
+           required>
+    <input class="form-control mb-3"
+           name="confirmation"
+           id="confirmation"
+           placeholder="Confirmation"
+           type="password"
+           autocomplete="new-password"
+           required>
     <button class="btn btn-primary" type="submit">Register</button>
     {% if USE_CAPTCHA %}
         <script src="https://hcaptcha.com/1/api.js" async defer></script>
@@ -30,11 +50,11 @@
 {% block script %}
 <script>
     document.querySelector("form").addEventListener("submit", event => {
-        if (document.querySelector("input[name=password]").value != document.querySelector("input[name=confirmation]").value) {
+        if (document.getElementById("password").value != document.getElementById("confirmation").value) {
             makeAlert("Passwords do not match");
             event.preventDefault();
         }
-        if (document.querySelector("input[name=password]").value.length < 8) {
+        if (document.getElementById("password").value.length < 8) {
             makeAlert("Password must be at least 8 characters");
             event.preventDefault();
         }
