--- a/src/templates/contest/createproblem.html
+++ b/src/templates/contest/createproblem.html
@@ -5,33 +5,64 @@
 {% block main %}
 <h1>Create Problem</h1>
 <form autocomplete="off" method="post" id="create" name="create" enctype=multipart/form-data>
-    <input class="form-control mb-3" type="text" id="id" name="id" placeholder="ID" required>
-    <input class="form-control mb-3" type="text" id="name" name="name" placeholder="Name" required>
+    <input class="form-control mb-3" id="id" name="id" placeholder="ID" required>
+    <input class="form-control mb-3" id="name" name="name" placeholder="Name" required>
     <div style="position: relative;">
-        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+        <textarea class="form-control mb-3 md-preview"
+                  id="description"
+                  name="description"
+                  rows="20"
+                  placeholder="Description"
+                  required></textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
     <div style="position: relative;">
-        <textarea class="form-control mb-3 md-preview" id="hints" name="hints" rows="20" placeholder="Hints"></textarea>
+        <textarea class="form-control mb-3 md-preview"
+                  id="hints"
+                  name="hints"
+                  rows="20"
+                  placeholder="Hints"></textarea>
         <div id="hints-out" class="md-preview"></div>
     </div>
     <div class="mb-3">
         Scoring: 
-        <input class="form-check-input" type="radio" id="score_type_static" name="score_type" value="static" required>
+        <input class="form-check-input"
+               type="radio"
+               id="score_type_static"
+               name="score_type"
+               value="static"
+               required>
         <label for="score_type_static">Static</label>
-        <input class="form-check-input" type="radio" id="score_type_dynamic" name="score_type" value="dynamic" required>
+        <input class="form-check-input"
+               type="radio"
+               id="score_type_dynamic"
+               name="score_type"
+               value="dynamic" required>
         <label for="score_type_dynamic">Dynamic</label>
     </div>
     <div id="score-static">
-        <input class="form-control mb-3" type="number" id="point_value" name="point_value" placeholder="Point Value" required>
+        <input class="form-control mb-3"
+               type="number"
+               name="point_value"
+               placeholder="Point Value"
+               required>
     </div>
     <div id="score-dynamic" style="display: none">
-        <input class="form-control mb-3" type="number" id="min_point_value" name="min_point_value" placeholder="Min Point Value">
-        <input class="form-control mb-3" type="number" id="max_point_value" name="max_point_value" placeholder="Max Point Value">
-        <input class="form-control mb-3" type="number" id="users_point_value" name="users_point_value" placeholder="Users Before Decay">
+        <input class="form-control mb-3"
+               type="number"
+               name="min_point_value"
+               placeholder="Min Point Value">
+        <input class="form-control mb-3"
+               type="number"
+               name="max_point_value"
+               placeholder="Max Point Value">
+        <input class="form-control mb-3"
+               type="number"
+               name="users_point_value"
+               placeholder="Users Before Decay">
     </div>
-    <input class="form-control mb-3" type="text" id="category" name="category" placeholder="Category" required>
-    <input class="form-control mb-3" type="text" id="flag" name="flag" placeholder="Flag" required>
+    <input class="form-control mb-3" name="category" placeholder="Category" required>
+    <input class="form-control mb-3" name="flag" placeholder="Flag" required>
     <input class="form-control mb-3" type="file" id="file" name="file" accept=".zip">
     <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="draft" name="draft">
@@ -43,29 +74,39 @@
 {% endblock %}
 {% block script %}
 <script>
-    document.getElementById('description').oninput = function() {
+    document.getElementById('description').addEventListener('input', function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById("description-out").innerHTML = product;
-        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
-    }
-    document.getElementById('hints').oninput = function() {
+        var outputDiv = document.getElementById("description-out");
+        outputDiv.innerHTML = product;
+        document.getElementById("description").style.height = outputDiv.offsetHeight + "px";
+    });
+    document.getElementById('hints').addEventListener('input', function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById("hints-out").innerHTML = product;
-        document.getElementById("hints").style.height = document.getElementById("hints-out").offsetHeight + "px";
-    }
+        var outputDiv = document.getElementById("hints-out");
+        outputDiv.innerHTML = product;
+        document.getElementById("hints").style.height = outputDiv.offsetHeight + "px";
+    });
 
     let score_types = document.querySelectorAll("input[name='score_type']");
     score_types[0].onclick = function() {
         document.getElementById("score-dynamic").style.display = "none";
         document.getElementById("score-static").style.display = "";
-        document.getElementById("score-dynamic").querySelectorAll("input").forEach(e => e.removeAttribute("required"));
-        document.getElementById("score-static").querySelectorAll("input").forEach(e => e.setAttribute("required", ""));
+        document.getElementById("score-dynamic")
+                .querySelectorAll("input")
+                .forEach(e => e.removeAttribute("required"));
+        document.getElementById("score-static")
+                .querySelectorAll("input")
+                .forEach(e => e.setAttribute("required", ""));
     }
     score_types[1].onclick = function() {
         document.getElementById("score-static").style.display = "none";
         document.getElementById("score-dynamic").style.display = "";
-        document.getElementById("score-static").querySelectorAll("input").forEach(e => e.removeAttribute("required"));
-        document.getElementById("score-dynamic").querySelectorAll("input").forEach(e => e.setAttribute("required", ""));
+        document.getElementById("score-static")
+                .querySelectorAll("input")
+                .forEach(e => e.removeAttribute("required"));
+        document.getElementById("score-dynamic")
+                .querySelectorAll("input")
+                .forEach(e => e.setAttribute("required", ""));
     }
 </script>
 {% endblock %}
