--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -5,8 +5,20 @@
 {% block main %}
 <h1 class="text-center">Reset Password</h1>
 <form method="post">
-    <input class="form-control mb-3" name="password" placeholder="Password" type="password" autocomplete="new-password" required>
-    <input class="form-control mb-3" name="confirmation" placeholder="Confirmation" type="password" autocomplete="new-password" required>
+    <input class="form-control mb-3"
+           name="password"
+           id="password"
+           placeholder="Password"
+           type="password"
+           autocomplete="new-password"
+           required>
+    <input class="form-control mb-3"
+           name="confirmation"
+           id="confirmation"
+           placeholder="Confirmation"
+           type="password"
+           autocomplete="new-password"
+           required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
@@ -20,11 +32,11 @@
 {% block script %}
 <script>
     document.querySelector("form").addEventListener("submit", event => {
-        if (document.querySelector("input[name=password]").value != document.querySelector("input[name=confirmation]").value) {
+        if (document.getElementById("password").value != document.getElementById("confirmation").value) {
             makeAlert("Passwords do not match");
             event.preventDefault();
         }
-        if (document.querySelector("input[name=password]").value.length < 8) {
+        if (document.getElementById("password").value.length < 8) {
             makeAlert("Password must be at least 8 characters");
             event.preventDefault();
         }
