JS code formatting

--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -32,11 +32,12 @@
 {% block script %}
 <script>
     document.querySelector("form").addEventListener("submit", event => {
-        if (document.getElementById("password").value != document.getElementById("confirmation").value) {
+        var password = document.getElementById("password").value;
+        if (password != document.getElementById("confirmation").value) {
             makeAlert("Passwords do not match");
             event.preventDefault();
         }
-        if (document.getElementById("password").value.length < 8) {
+        if (password.length < 8) {
             makeAlert("Password must be at least 8 characters");
             event.preventDefault();
         }
@@ -44,7 +45,13 @@
 
     function makeAlert(message) {
         var tmp = document.createElement('div');
-        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`;
+        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">
+                             ${message}
+                             <button type="button"
+                                     class="btn-close"
+                                     data-bs-dismiss="alert"
+                                     aria-label="Close"></button>
+                         </div>`;
         document.querySelector("main").prepend(tmp.firstChild);
     }
 </script>
