--- a/src/templates/problem/problem.html
+++ b/src/templates/problem/problem.html
@@ -71,7 +71,8 @@
             document.querySelector("#confirm form")
                     .setAttribute("action", window.location.pathname + "/delete");
             document.querySelector("#confirm form .btn")
-                    .setAttribute("value", "Are you sure you want to delete this problem? Click here to confirm.");
+                    .setAttribute("value", "Are you sure you want to delete this problem? " +
+                                           "Click here to confirm.");
         }
         
         function publishmsg() {
@@ -79,7 +80,8 @@
             document.querySelector("#confirm form")
                     .setAttribute("action", window.location.pathname + "/publish");
             document.querySelector("#confirm form .btn")
-                    .setAttribute("value", "Are you sure you want to publish this problem? Click here to confirm.");
+                    .setAttribute("value", "Are you sure you want to publish this problem? " +
+                                           "Click here to confirm.");
         }
     </script>
     {% endblock %}
