--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -121,6 +121,7 @@ table {
 main {
     padding-top: 3rem!important;
     padding-bottom: 3rem!important;
+    flex-grow: 1;
 }
 
 td {
@@ -137,6 +138,12 @@ td {
 
 a {
     text-decoration: none;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /****************** COLOURS **********************************/
