bug fix, work on homepage editing
Note: this commit does not include the admin/edithomepage.html template
I'm still working on it

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,25 @@
     width: 100%;
 }
 
+#home-container {
+    margin: 16px 0;
+}
+
+#home-container.home1 {
+    min-height: 80vh;
+}
+
+#home {
+    position: relative;
+    padding: 16px;
+}
+
+#home-container.home1 #home {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 /****************** PROBLEM PAGE LAYOUT **********************/
 .flag-submit {
     width: 90%;
