--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -20,6 +20,12 @@
 <br>
 <br>
 <a class="btn btn-primary" href="/problems/draft" role="button">Draft Problems</a>
+<br>
+<br>
+<a class="btn btn-primary" href="/admin/edithomepage" role="button">Edit Homepage</a>
+<br>
+<br>
+<a class="btn btn-primary" href="/admin/previewhomepage" role="button">Preview Homepage</a>
 <hr>
 <p>
     The only thing maintenance mode should be used for is to make significant changes to the
