--- a/src/templates/home_fragment/home2.html
+++ b/src/templates/home_fragment/home2.html
@@ -21,10 +21,5 @@
         </div>
     </div>
 {% endfor %}
-<div id="pagination"></div>
-{% endblock %}
-{% block script %}
-<script>
-    var total_length = {{ length }};
-</script>
+<div id="pagination" data-pages="{{ length }}"></div>
 {% endblock %}
