--- a/src/templates/problem/draft_problems.html
+++ b/src/templates/problem/draft_problems.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <h1>Draft Problems</h1>
-<div id="pagination"></div>
+<div id="pagination" data-pages="{{ length }}"></div>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
@@ -25,5 +25,4 @@
         </tbody>
     </table>
 </div>
-<script>var total_length = {{ length }};</script>
 {% endblock %}
